@@ -11,6 +11,10 @@ dpkg (1.14.23) UNRELEASED; urgency=low
   [ Guillem Jover ]
   * Untangle fatal abort condition from the “too many errors” one in the
     archives and packages processing loop.
+  * Abort on unrecoverable fatal errors instead of continuing execution, as
+    the recovery code assumed the execution would not be reaching it again
+    and some times bogus update files were created either with incompletely
+    written content or with '#padding' lines. Closes: #497041, #499070
 
   [ Updated dpkg translations ]
   * Catalan (Jordi Mallach).
