@@ -1,5 +1,10 @@
 2008-11-14  Guillem Jover  <guillem@debian.org>
 
+	* lib/ehandle.c (run_error_handler): In case of onerr_abort print an
+	error message and exit, otherwise longjmp.
+
+2008-11-14  Guillem Jover  <guillem@debian.org>
+
 	* src/main.h (abort_processing): New variable declaration.
 	* src/errors.c (abort_processing): New variable definition.
 	* src/archives.c (print_error_perpackage): Use abort_processing
